# cloudsmith-github-actions-assessment

./: .gitignore  LICENSE
.github/workflows/: authenticate.yml  build.yml  main.yml  publish.yml
calculator-app/: pyproject.toml  version.py
