[build-system]
requires = ["setuptools>=61.0", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-app"
version = "0.0.1"
description = "A simple calculator app"
authors = [
    { name="Priyansh Sharma", email="psharma@cloudsmith.io" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.setuptools.packages.find]
where = ["."]
